[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapd"
version = "0.0.1"
authors = [
  { name="Samarth Pusalkar", email="samar29p@gmail.com" },
]
description = "Hashable storage on disk"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/samarthpusalkar/MappingOnDisk"
"Bug Tracker" = "https://github.com/samarthpusalkar/MappingOnDisk/issues"